Perform style refactoring based on code inspection (#1657)