@@ -5,7 +5,6 @@
 package com.linkedin.kafka.cruisecontrol.common;
 
 import com.linkedin.kafka.cruisecontrol.servlet.response.JsonResponseField;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -21,7 +20,7 @@ public enum Statistic {
   ST_DEV("STD");
 
   private final String _stat;
-  private static final List<Statistic> CACHED_VALUES = Collections.unmodifiableList(Arrays.asList(values()));
+  private static final List<Statistic> CACHED_VALUES = List.of(values());
 
   Statistic(String stat) {
     _stat = stat;
