@@ -35,7 +35,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -108,12 +107,12 @@ public class ExcludedBrokersForLeadershipTest {
     Collection<Object[]> p = new ArrayList<>();
 
     Set<Integer> noExclusion = Collections.emptySet();
-    Set<Integer> excludeB1 = Collections.unmodifiableSet(Collections.singleton(1));
-    Set<Integer> excludeB0 = Collections.unmodifiableSet(Collections.singleton(0));
-    Set<Integer> excludeB0B1 = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(0, 1, 2)));
+    Set<Integer> excludeB1 = Collections.singleton(1);
+    Set<Integer> excludeB0 = Collections.singleton(0);
+    Set<Integer> excludeB0B1 = Set.of(0, 1, 2);
     Set<Integer> excludeAllBrokers = Collections.unmodifiableSet(RACK_BY_BROKER.keySet());
     Set<Integer> noDeadBroker = Collections.emptySet();
-    Set<Integer> deadBroker0 = Collections.unmodifiableSet(Collections.singleton(0));
+    Set<Integer> deadBroker0 = Collections.singleton(0);
 
     // ============RackAwareGoal============
     // With single excluded broker, rack aware satisfiable cluster, no dead brokers (No exception, No proposal, Expected to look optimized)
